--- a/BackEnd/TacoHub/build.gradle
+++ b/BackEnd/TacoHub/build.gradle
@@ -62,6 +62,10 @@ dependencies {
 	//email dependency
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+
+	// OpenAPI API documentation dependency 
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
 	//web dependency
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
