--- a/BackEnd/TacoHub/src/main/resources/application.yml
+++ b/BackEnd/TacoHub/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 5000
 
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
+
 # AWS 전역 설정 (모든 환경에서 공통으로 사용)
 cloud:
   aws:
